--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <p>En un principio, Nintendo no consideraba que el videojuego de Miyamoto y Tezuka fuera a alcanzar notoriedad en el mercado japonés, aunque poco después se convenció de su impacto.</p>
 
-    <img src="2x1_HP_NSwitch2_TLoZTotKN_image1600w.jpg" alt="">
+    <p>La franquicia de The Legend of Zelda incluye una serie animada de televisión transmitida en 1989, así como numerosos mangas, novelas y libros publicados bajo la licencia de Nintendo, aunque ninguno de estos se consideran canónicos.</p>
+
+    <p>«Hace mucho tiempo existió un reino que ocultaba el poder dorado de los dioses. Era un lugar hermoso, de verdes bosques y enormes montañas, donde reinaba la paz.</p>
 </body>
 </html>
