--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>VideoJuegos</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>The Legend of Zelda</h1>
